Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -1,5 +1,5 @@
 {
-  "domain": "eletroshoppingsantaifigenia.netlify.app",
+  "domain": "eletroshoppingsantaifigenia.online",
   "currency_symbol": "R$",
   "primary_color": "#1e00ff",
   "theme": {
